# dttb

./: .gitignore  README.md  dvbt2.py  pyproject.toml
doc/min fs calc/: DTTB.xlsm  dttb_fs_calc.xlsm
doc/tmp/tests/: example_table12.py  example_table13.py
dvbt2/: __init__.py  dvbt2.py  dvbt2_cli.py
examples/: example_table13.py
src/dvbt2/: dvbt2.py  dvbt2_cli.py
tests/: example_table12.py
