[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "dvbt2-calculator"
version = "0.1.0"
description = "DVB-T2 field-strength and equivalent median field-strength calculator following ITU-R BT.2033-2, BT.2036-5 and GE06."
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"

authors = [
  {name = "Bakyt-Bek Murzabaev", email = "b.b.murzabaev@gmail.com"},
]

keywords = [
  "dvb-t2",
  "dttb",
  "broadcasting",
  "itu-r",
  "bt2033",
  "field strength",
  "median field strength",
  "television planning",
  "spectrum engineering"
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities"
]

dependencies = []

[project.scripts]
dvbt2 = "dvbt2.dvbt2_cli:main"

[tool.hatch.build.targets.sdist]
include = ["dvbt2", "README.md", "LICENSE*"]

[tool.hatch.build.targets.wheel]
packages = ["dvbt2"]
